--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-svg": "^13.8.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
