--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-svg": "^13.8.0",
-    "react-redux": "^8.0.5"
+    "react-native-uuid": "^2.0.1",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,6 +27,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
